// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handles empty input gracefully 1`] = `[]`;

exports[`handles markdown with only whitespace 1`] = `[]`;

exports[`maps complete document with mixed block types 1`] = `
[
  {
    "heading_1": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Project Summary",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_1",
  },
  {
    "object": "block",
    "paragraph": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "This is a paragraph with ",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": true,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "bold",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": " and ",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": true,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "italic",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": " text.",
          },
          "type": "text",
        },
      ],
    },
    "type": "paragraph",
  },
  {
    "heading_2": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Implementation",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_2",
  },
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Used Express for the API",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Connected to Notion API",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Added error handling",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
  {
    "code": {
      "language": "python",
      "rich_text": [
        {
          "text": {
            "content": "def hello_world():
    print("Hello")",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "code",
  },
  {
    "heading_3": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Next Steps",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_3",
  },
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Add tests",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Deploy to production",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Monitor performance",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
]
`;

exports[`maps markdown code blocks to Notion code blocks with language 1`] = `
[
  {
    "code": {
      "language": "javascript",
      "rich_text": [
        {
          "text": {
            "content": "console.log('hello');",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "code",
  },
]
`;

exports[`maps markdown headings to Notion heading blocks 1`] = `
[
  {
    "heading_1": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "H1 Title",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_1",
  },
  {
    "heading_2": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "H2 Subtitle",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_2",
  },
  {
    "heading_3": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "H3 Section",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_3",
  },
]
`;

exports[`maps markdown lists to Notion bulleted_list_item blocks 1`] = `
[
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "First item",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Second item",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
  {
    "bulleted_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Third item",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "bulleted_list_item",
  },
]
`;

exports[`maps markdown numbered lists to Notion numbered_list_item blocks 1`] = `
[
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "First step",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Second step",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
  {
    "numbered_list_item": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "Third step",
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "numbered_list_item",
  },
]
`;

exports[`preserves inline formatting in rich_text segments 1`] = `
[
  {
    "object": "block",
    "paragraph": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "This has ",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": true,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "bold",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": ", ",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": true,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "italic",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": ", and ",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": true,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "code",
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": " formatting.",
          },
          "type": "text",
        },
      ],
    },
    "type": "paragraph",
  },
]
`;
